# webgpu-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  application.cpp  application.h  camera.cpp  camera.h  init_wgpu.c  init_wgpu.cpp  init_wgpu.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  texture.cpp
app/: AppState.cpp  AppState.h  CMakeLists.txt  Deserialize.cpp  Deserialize.h  Export.cpp  Export.h  Json.cpp  Json.h  Listener.h  Modal.h  NameMap.h  Pane.cpp  Pane.h  Project.cpp  Project.h  Reducer.cpp  Reducer.h  Serialize.cpp  Serialize.h  ThumbnailUtil.cpp  ThumbnailUtil.h  TilePicker.cpp  TilePicker.h  TileThumbnail.cpp  TileThumbnail.h  Util.h  appstate.cpp  appstate.h  filedialog.cpp  filedialog.h  main.cpp  modal.cpp  modal.h  pane.cpp  reducer.cpp  reducer.h  tilepicker.cpp  tilepicker.h
app/Commands/: Command.cpp  Command.h  CreateLayerCommand.cpp  CreateLayerCommand.h  CreateLevelCommand.cpp  CreateLevelCommand.h  CreateTileCommand.cpp  CreateTileCommand.h  CreateTiledefCommand.cpp  CreateTiledefCommand.h  DeleteLayerCommand.cpp  DeleteLayerCommand.h  DeleteLevelCommand.cpp  DeleteLevelCommand.h  DeleteTileCommand.cpp  DeleteTileCommand.h  DeleteTiledefCommand.cpp  DeleteTiledefCommand.h  MoveTiledefCommand.cpp  MoveTiledefCommand.h  PlaceTileCommand.cpp  PlaceTileCommand.h  PlaceTilesCommand.cpp  PlaceTilesCommand.h  ReorderLayerCommand.cpp  ReorderLayerCommand.h  ReorderTiledefCommand.cpp  ReorderTiledefCommand.h  ResizeWorldCommand.cpp  ResizeWorldCommand.h  UpdateTileCommand.cpp  UpdateTileCommand.h  UpdateTiledefCommand.cpp  UpdateTiledefCommand.h
app/Editor/: Editor.cpp  Editor.h  ErrorModal.cpp  ErrorModal.h  ExportDialog.cpp  ExportDialog.h  FileDialog.cpp  FileDialog.h  ListBox.cpp  ListBox.h  Modal.cpp
app/Editor/Tilemap/: HeightMode.cpp  HeightMode.h  LayerList.cpp  LayerList.h  LayerNode.cpp  LayerNode.h  LevelNode.cpp  LevelNode.h  TileMode.cpp  TileMode.h  View2DMode.cpp  View2DMode.h  View3DMode.cpp  View3DMode.h  ZPalette.cpp  ZPalette.h
app/Editor/Tileset/: AddTile.cpp  AddTile.h  NewTile.cpp  NewTile.h  TileDefinitionEditor.cpp  TileDefinitionEditor.h  TileList.cpp  TileList.h  TileThumbnail.cpp  TileThumbnail.h  TilesetThumbnails.cpp  TilesetThumbnails.h
app/Tilemap/: CursorOverlay.cpp  CursorOverlay.h  HeightMode.cpp  HeightMode.h  LayerNode.cpp  LayerNode.h  LevelNode.cpp  LevelNode.h  Mode.h  TileMode.cpp  TileMode.h  TilemapEditor.cpp  TilemapEditor.h  View2DMode.cpp  View2DMode.h  View3DMode.cpp  View3DMode.h  ZPalette.cpp  ZPalette.h
app/Tileset/: AddTile.cpp  AddTile.h  ModelInspector.cpp  ModelInspector.h  RotationDropdown.cpp  RotationDropdown.h  TileDefinitionEditor.cpp  TileDefinitionEditor.h  TileList.cpp  TileList.h  TileMesh.cpp  TileMesh.h  TileRotations.cpp  TileRotations.h  TilesetPane.cpp  TilesetPane.h
app/commands/: command.cpp  command.h  createlayercommand.cpp  createlayercommand.h  createtilecommand.cpp  createtilecommand.h  placetilecommand.cpp  placetilecommand.h  updatetilecommand.cpp  updatetilecommand.h
app/tilemap/: tileinstance.cpp  tileinstance.h  tilelayer.cpp  tilelayer.h  tilemapeditor.cpp  tilemapeditor.h
app/tileset/: addnewtile.cpp  addnewtile.h  addtile.cpp  addtile.h  modelinspector.cpp  modelinspector.h  rotationdropdown.cpp  rotationdropdown.h  tiledefinition.cpp  tiledefinition.h  tiledefinitioneditor.cpp  tiledefinitioneditor.h  tilelist.cpp  tilelist.h  tilemesh.cpp  tilemesh.h  tilerotations.cpp  tilerotations.h  tileset.cpp  tileset.h  tileseteditor.cpp  tileseteditor.h  tilesetpane.cpp  tilesetpane.h
assets/: test.blend  test.blend1  test.fbx  test.glb  test.json  test.mtl
include/noworry/: application.h  camera.h  effect.h  flatmaterial.h  flatmesheffect.h  flatmeshpipeline.h  grid.h  layout.h  material.h  mesh.h  meshbuilder.h  mesheffect.h  model.h  pipeline.h  renderer.h  rendertarget.h  resourcetable.h  texture.h  texturematerial.h  texturemesheffect.h  texturemeshpipeline.h  transform.h  uniformlayout.h
include/noworry/Draw2D/: Frame2D.h  Renderer2D.h  SpriteBatch.h  SpritePipeline.h  SpriteRenderer.h  Spritesheet.h
include/noworry/Draw3D/: Frame3D.h  ModelGroup.h
include/noworry/Gfx3D/: BasicMesh.h  DynamicMesh.h  DynamicModel.h  DynamicModelInstance.h  Mesh.h  Model.h  ModelData.h  ModelInstance.h  ModelPart.h  ObjectBindGroup.h  RenderBatch.h  RenderContext.h  Renderable.h
include/noworry/Material/: Effect.h  FlatEffect.h  FlatMaterial.h  Material.h  TextureEffect.h  TextureMaterial.h
include/noworry/Pipeline/: MeshVertexShader.h  PipelineFactory.h
include/noworry/Resource/: ResourceCache.h  ResourceLoader.h
include/noworry/camera/: abstractcamera.h  (+3 more)
src/: CMakeLists.txt  application.cpp  camera.cpp  camera.h  effect.cpp  flatmaterial.cpp  flatmesheffect.cpp  flatmeshpipeline.cpp  grid.cpp  init_wgpu.cpp  init_wgpu.h  layout.cpp  material.cpp  mesh.cpp  mesh.h  meshbuilder.cpp  mesheffect.cpp  model.cpp  pipeline.cpp  renderer.cpp  rendertarget.cpp  resourcetable.cpp  stb_image.c  texture.cpp  texture.h  texturematerial.cpp  texturemesheffect.cpp  texturemeshpipeline.cpp  transform.cpp  uniformlayout.cpp
src/Draw2D/: Frame2D.cpp  Renderer2D.cpp  SpriteBatch.cpp  SpritePipeline.cpp  SpriteRenderer.cpp  Spritesheet.cpp
src/Draw3D/: Frame3D.cpp  ModelGroup.cpp
src/Gfx3D/: BasicMesh.cpp  DynamicMesh.cpp  DynamicModel.cpp  DynamicModelInstance.cpp  Model.cpp  ModelData.cpp  ModelInstance.cpp  ModelPart.cpp  ObjectBindGroup.cpp  RenderBatch.cpp  RenderContext.cpp
src/Material/: FlatEffect.cpp  FlatMaterial.cpp  TextureEffect.cpp  TextureMaterial.cpp
src/Pipeline/: MeshVertexShader.cpp  PipelineFactory.cpp
src/Resource/: ResourceLoader.cpp
src/camera/: abstractcamera.cpp  orthographiccamera.cpp  perspectivecamera.cpp
src/material/: flatmaterial.cpp  flatmesheffect.cpp  flatmeshpipeline.cpp  mesheffect.cpp  texturematerial.cpp  texturemesheffect.cpp  texturemeshpipeline.cpp  uniformlayout.cpp
src/scene/: camera.cpp  model.cpp  renderobject.cpp  scene.cpp
(+15 files in other folders)
